# vpn_gen_cli

./: .gitignore  Cargo.toml  README.md  aaa  standa.txt
src/: lib.rs  main.rs
