[package]
name = "vpngen_lib"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0.194", default-features = false }
serde_json = "1.0"
serde_derive = "1.0.166"
clap = { version = "4.5.9", features = ["derive"] }

amcofixer_lib = {version = "1.0.4", git = "https://github.com/Paulo1312/amcofixer-lib.git"}
ss_to_json_outline = {version = "0.4.2", git = "https://github.com/Paulo1312/ss_to_json_outline_rust.git"}

[profile.release]
opt-level = "z"
